--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "timeseries-from-gitlog",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Represent the git log as time-series data (JSON).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "tape": "^4.9.1"
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hxoht/timeseries-from-gitlog.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hxoht/timeseries-from-gitlog/issues"
+  },
+  "homepage": "https://github.com/hxoht/timeseries-from-gitlog#readme"
 }
